alignment fix

--- a/public/css/design.css
+++ b/public/css/design.css
@@ -1,19 +1,22 @@
 a {
-color:#000;
-display:block;
-height:100px;
-position:relative;
-text-decoration:none;
-width:100px;
+    color:#000;
+    display:block;
+    height:100px;
+    position:relative;
+    text-decoration:none;
+    width:100px;
 }
-#chess_board { border:1px solid #777; cursor: crosshair;}
+#chess_board {
+    border:1px solid #777;
+    cursor: crosshair;
+}
 #chess_board td {
-background:#fff;
-height:80px;
-text-align:center;
-vertical-align:middle;
-width:80px;
-border:1px solid #aaa;
+    background:#fff;
+    height:80px;
+    text-align:center;
+    vertical-align:middle;
+    width:80px;
+    border:1px solid #aaa;
 }
 .chat{
     overflow: auto;
@@ -35,5 +38,5 @@ a, .devtag{
     display: inline;
 }
 .leftab{
-  height: 561px;
+    height: 561px;
 }
